# drakvuf-sandbox

./: .drone.yml  .flake8  .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  COPYING  LICENSE  MANIFEST.in  Makefile  README.md  USAGE_STATISTICS.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  (+2 more)
ci/: Dockerfile-bundle  build_bundle.sh  build_utils.sh  custom_bundle.sh
dev/: Dockerfile-web  backend.Dockerfile  compose.yml  config.example.toml  config.ini  docker-compose.yml  frontend.Dockerfile
docs/: building_packages.rst  conf.py  drakpdb.rst  faq.rst  index.rst  ipt.rst  regression_testing.rst  requirements.txt  sandbox_development.rst  understanding_sandbox.rst  whats_changed.rst
drakcore/: .flake8  Dockerfile  Dockerfile-core  MANIFEST.in  entrypoint.sh  pyproject.toml  requirements.txt  setup.py
draklib/: .gitignore  MANIFEST.in  pyproject.toml  requirements.txt  setup.py
drakrun/: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  Makefile  mypy.ini  pyproject.toml  requirements.txt  setup.py  version.py
drakshell/: .gitignore  drakshell_client.py
examples/: README.md  consumer.py  push_sample.py  requirements.txt
package/: mkdeb
scripts/: bump_version.json  bump_version.py  split_log.sh
test/: ci-files.txt  conftest.py  requirements.txt  test_drakrun.py  test_sanity.py  utils.py
test/vm-runner-client/: .gitignore  pyproject.toml
test/vm-runner-client/vm_runner_client/: __init__.py  __main__.py  client.py  socks.py  sockstls.py  sockstls_requests.py
(+465 files in other folders)
